--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,6 +1,6 @@
 <div id="menu">
-  <h1>Manage Items</h1><br>
-  <%= link_to  'Create Item', new_admin_item_path, class: 'btn btn-info btn-lg' %><br><br>
+  <h1 class="center">Manage Items</h1><br>
+  <%= link_to  'Create Item', new_admin_item_path, class: 'btn btn-info btn-lg center' %><br><br>
   <div class="row">
     <% @items.each do |item| %>
       <div class="floaters">
