--- a/app/assets/stylesheets/_orders.scss
+++ b/app/assets/stylesheets/_orders.scss
@@ -14,11 +14,30 @@
   margin:0 auto;
   border:1px solid white;
   background:rgba(255, 255, 255, 0.91);
+  text-align:center;
+  margin-bottom:50px;
+
+  th{
+    text-align:center;
+  }
 
   tfoot{
     td{
       text-align:center;
     }
+  }
+  .submit{
+    display:block;
+    margin:0 auto;
+  }
+}
+
+.radio{
+
+  label{
+    display:block;
+    margin:0 auto;
+    margin-left:30px;
   }
 }
 
