--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -63,6 +63,10 @@ input[type="submit"] {
   margin-bottom:50px;
 }
 
+#cart table tfoot td{
+  border:none;
+}
+
 h4 {
   text-align: center;
   margin-bottom: 20px;
