--- a/app/views/admin/orders/_complete_or_cancel.html.erb
+++ b/app/views/admin/orders/_complete_or_cancel.html.erb
@@ -1,11 +1,11 @@
 <%= form_for [:admin, @order] do |f| %>
-<div id="completed">
+<div id="completed" class="radio">
    <%= f.radio_button(:status, "completed") %>
    <%= f.label(:status, "Complete") %>
  </div>
- <div id="cancelled">
+ <div id="cancelled" class="radio">
    <%= f.radio_button(:status, "cancelled") %>
    <%= f.label(:status, "Cancel") %>
  </div>
-   <%= f.submit "Submit" %>
+   <%= f.submit "Submit", class: "submit" %>
  <% end %>
