--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -7,7 +7,7 @@
       <th>Order Id</th>
       <th>Updated</th>
     </tr>
-    <%= render partial: "order", collection: @orders %>
+    <%= render partial: "order", collection: @orders.reverse %>
   </table>
 <% else %>
   <h1 class="admin-order-title">Manage <%= @orders.first.status.capitalize %> Orders</h1>
