--- a/app/views/admin/orders/_filter.html.erb
+++ b/app/views/admin/orders/_filter.html.erb
@@ -1,4 +1,3 @@
 <div class="filter">
-  <label>Filter By Status</label>
-  <%= select("order", "filter_status", show_by_order_status, selected: "all") %>
+  <%= select("order", "filter_status", show_by_order_status, { selected: "all" }, { :class => "btn btn-info btn-lg center", :'data-toggle' => "dropdown" }) %>
 </div>
