--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -75,3 +75,18 @@ h4 {
   margin-left: auto;
   margin-right: auto;
 }
+
+.item-update {
+  background: rgba(43,58,223,0.2);
+  width: 500px;
+  border: 1em;
+  border-color: black;
+  border-style: solid;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#delete-edit-item {
+  margin-left: auto;
+  margin-right: auto;
+}
