--- a/app/views/admin/item_categories/new.html.erb
+++ b/app/views/admin/item_categories/new.html.erb
@@ -2,6 +2,8 @@
 <%= form_for([:admin, @item_category]) do |f| %>
   <%= f.label "Item" %>
   <%= f.select(:item_id, @item_options, {}, { :class => "btn btn-info btn-lg left"}) %>
-  <%= f.hidden_field :category_id, value: params[:category_id] %>
-  <%= f.submit "Submit" %>
+  <%= f.hidden_field :category_id, value: params[:category_id] %><br><br>
+  <div id="small_submit_button">
+  <%= f.submit "Submit", class: "btn-info" %>
+</div>
 <% end %>
