--- a/app/assets/stylesheets/_session.scss
+++ b/app/assets/stylesheets/_session.scss
@@ -6,7 +6,7 @@
   margin:0 auto;
   text-align:center;
   padding:30px;
-  padding-left:220px;
+  // padding-left:220px;
   border:3px solid white;
   background:rgba(253, 253, 253, 0.78);
 
