Finish redirects, error messages, and red delete button

--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -18,6 +18,6 @@
       <%= f.file_field :avatar %><br>
       <%= f.text_field :remote_avatar_url %>
       <%= f.submit "Update Item" %><br>
-    <div id="delete-edit-item"><%= link_to "Delete Item", admin_item_path, method: :delete, class: 'btn btn-info btn-md active' %></div>
+    <div id="delete-edit-item"><%= link_to "Delete Item", admin_item_path, method: :delete, class: 'btn btn-danger btn-md active' %></div>
     <% end %>
   </div>
