--- a/app/assets/stylesheets/_session.scss
+++ b/app/assets/stylesheets/_session.scss
@@ -1,17 +1,16 @@
 @import 'base';
 
 #login-form{
-  width:60%;
+  width:366px;
   display:block;
   margin:0 auto;
   text-align:center;
   padding:30px;
-  // padding-left:220px;
   border:3px solid white;
   background:rgba(253, 253, 253, 0.78);
 
   input#check-in{
-    margin:none;
+    margin-left: 60px;
   }
 
   div{
